--- a/eos-voter/public/vote.html
+++ b/eos-voter/public/vote.html
@@ -3,20 +3,7 @@
 <title>Cast my vote</title>
 </head>
 <body>
-<script src="/js/mithril.js"></script>
-    <script>
-    var root = document.body
-
-    var Hello = {
-        view: function() {
-            return m("main", [
-                m("h1", {class: "title"}, "Cast my vote"),
-                m("button", "Do it"),
-            ])
-        }
-    }   
-    m.mount(root, Hello)
-    </script>
+<script src="/bin/app.js"></script>
 
 </body>
 </html>
